[gd_scene load_steps=2 format=3 uid="uid://chat_overlay"]

[ext_resource type="Script" path="res://ui/chat.gd" id="1"]

[node name="Chat" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -260.0
offset_right = 340.0
offset_bottom = -10.0
mouse_filter = 1

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ChatMessages" type="VBoxContainer" parent="Panel/Margin/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InputRow" type="HBoxContainer" parent="Panel/Margin/VBox"]
layout_mode = 2

[node name="InputField" type="LineEdit" parent="Panel/Margin/VBox/InputRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Press T to chat..."
